--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./Style.css">
+<link rel="stylesheet" href="./style.css">
 
 </head>
 
@@ -20,7 +20,7 @@
 <p>Click on the element below to open the side navigation menu.</p>
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 
-    <script type="text/javascript" src="./Script.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
 
   </body>
 </html>
